<resources>

    <string name="app_name">WalletPad</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_update">Update</string>
    <string name="action_share">Share</string>

    <string name="tab_summary">Summary</string>
    <string name="tab_wallets">Wallets</string>
    <string name="tab_plans">Plans</string>

    <string name="nav_sign_in">Sign in</string>
    <string name="nav_summary">Summary</string>
    <string name="nav_operations">Operations</string>
    <string name="nav_budget">Budget</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_tools">Tools</string>
    <string name="nav_import">Import SMS</string>
    <string name="nav_banks">Find bank</string>
    <string name="nav_converter">Currency converter</string>
    <string name="nav_export">Export to CSV</string>
    <string name="nav_travel_mode">Travel mode</string>
    <string name="nav_other">Other</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>

    <string name="please_wait">Please, wait…</string>

    <string name="default_currency">RUB</string>
    <string name="balance">Balance</string>
    <string name="save">Save</string>
    <string name="save_operation">Save operation</string>
    <string name="item_expense">Expense</string>
    <string name="item_income">Income</string>
    <string name="item_transfer">Transfer</string>
    <string name="item_plan">Plan</string>
    <string name="item_wallet">Wallet</string>

    <string-array name="item_types">
        <item>Expense</item>
        <item>Income</item>
        <item>Transfer</item>
        <item>Plan</item>
        <item>Wallet</item>
    </string-array>

    <string-array name="currencies">
        <item>RUB</item>
        <item>USD</item>
        <item>JPY</item>
        <item>BGN</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>GBP</item>
        <item>HUF</item>
        <item>PLN</item>
        <item>RON</item>
        <item>SEK</item>
        <item>CHF</item>
        <item>NOK</item>
        <item>HRK</item>
        <item>TRY</item>
        <item>AUD</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CNY</item>
        <item>HKD</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>KRW</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>NZD</item>
        <item>PHP</item>
        <item>SGD</item>
        <item>THB</item>
        <item>ZAR</item>
    </string-array>

    <string-array name="plans_type">
        <item>GIFT</item>
        <item>LUXURY</item>
        <item>REST</item>
        <item>TAX</item>
        <item>OTHER</item>
    </string-array>

    <string-array name="wallets_type">
        <item>CARD</item>
        <item>CASH</item>
        <item>DEPOSIT</item>
        <item>STOCK</item>
        <item>OTHER</item>
    </string-array>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="category_expense_food">Food</string>
    <string name="category_expense_clothes">Clothes</string>
    <string name="category_expense_house">House</string>
    <string name="category_expense_medicine">Medicine</string>
    <string name="category_expense_transport">Transport</string>
    <string name="category_expense_education">Education</string>
    <string name="category_expense_entertainment">Entertainment</string>
    <string name="category_expense_work">Work</string>
    <string name="category_expense_internet">Internet</string>
    <string name="category_expense_gifts">Gifts</string>
    <string name="category_expense_hobby">Hobby</string>
    <string name="category_expense_other">Other</string>

    <string name="logout">Logout</string>
    <string name="no_data_available">No data available</string>
    <string name="data_loading_error">Error while loading data</string>


</resources>
