<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/nav_fragments" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_summary"
            android:checked="true"
            android:icon="@drawable/ic_summary"
            android:title="@string/nav_summary" />
        <item
            android:id="@+id/nav_operations"
            android:icon="@drawable/ic_operations"
            android:title="@string/nav_operations" />
        <item
            android:id="@+id/nav_budget"
            android:icon="@drawable/ic_budget"
            android:title="@string/nav_budget" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_statistics"
            android:title="@string/nav_statistics" />

        <item android:title="@string/nav_tools">
            <menu>
                <item
                    android:id="@+id/nav_import"
                    android:checkable="true"
                    android:icon="@drawable/ic_import"
                    android:title="@string/nav_import" />
                <item
                    android:id="@+id/nav_banks"
                    android:checkable="true"
                    android:icon="@drawable/ic_banks"
                    android:title="@string/nav_banks" />
                <item
                    android:id="@+id/nav_converter"
                    android:checkable="true"
                    android:icon="@drawable/ic_converter"
                    android:title="@string/nav_converter" />
                <item
                    android:id="@+id/nav_export"
                    android:checkable="true"
                    android:icon="@drawable/ic_export"
                    android:title="@string/nav_export" />
            </menu>
        </item>
    </group>

    <group android:id="@+id/nav_actions" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_travel"
            android:title="@string/nav_travel_mode"
            android:icon="@drawable/ic_travel"
            app:actionLayout="@layout/nav_checkbox" />

        <item android:title="@string/nav_other">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/nav_settings" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/nav_about" />
            </menu>
        </item>
    </group>
</menu>
