<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_summary"
            android:title="@string/nav_summary"
            android:icon="@drawable/ic_summary"
            android:checked="true" />
        <item
            android:id="@+id/nav_operations"
            android:title="@string/nav_operations"
            android:icon="@drawable/ic_operations" />
        <item
            android:id="@+id/nav_budget"
            android:title="@string/nav_budget"
            android:icon="@drawable/ic_budget" />
        <item
            android:id="@+id/nav_statistics"
            android:title="@string/nav_statistics"
            android:icon="@drawable/ic_statistics" />

        <item
            android:title="@string/nav_tools"
            android:checkable="false">
            <menu>
                <item
                    android:id="@+id/nav_import"
                    android:title="@string/nav_import"
                    android:icon="@drawable/ic_import"
                    android:checkable="true" />
                <item
                    android:id="@+id/nav_banks"
                    android:title="@string/nav_banks"
                    android:icon="@drawable/ic_banks"
                    android:checkable="true" />
                <item
                    android:id="@+id/nav_converter"
                    android:title="@string/nav_converter"
                    android:icon="@drawable/ic_converter"
                    android:checkable="true" />
                <item
                    android:id="@+id/nav_export"
                    android:title="@string/nav_export"
                    android:icon="@drawable/ic_export"
                    android:checkable="true" />
            </menu>
        </item>


        <item
            android:title="@string/nav_other"
            android:checkable="false">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:title="@string/nav_settings"
                    android:icon="@drawable/ic_settings" />
                <item
                    android:id="@+id/nav_about"
                    android:title="@string/nav_about"
                    android:icon="@drawable/ic_about" />
            </menu>
        </item>

    </group>
</menu>
